Fix sonar warning